Nginx-Ingress-Controller/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: "basic" # 인증 타입
    nginx.ingress.kubernetes.io/auth-secret: "prometheus-basic-auth" # 인증에 사용할 secret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Prometheus" # 인증 프롬프트에 보내는 메시지
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prometheus.kkamji.net
    secretName: prometheus-tls
  ingressClassName: nginx
  rules:
  - host: prometheus.kkamji.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
